apps/base/gatus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: gatus
spec:
  selector:
    app: gatus
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
