apps/base/gatus/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus
  namespace: gatus
spec:
  parentRefs:
    - name: amajor-cloud-gateway
      namespace: envoy-gateway-system
  hostnames:
    - uptime.amajor.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gatus
          port: 8080
